@@ -1,3 +1,8 @@
+2011-07-05  Ian Lance Taylor  <iant@google.com>
+
+	* object.cc (Sized_relobj_file::include_section_group): Add
+	information to comment about signature location.
+
 2011-07-02  Ian Lance Taylor  <iant@google.com>
 
 	PR gold/12957
